--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,14 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
-    <script>
-        // var template = "<h1>My first react app</h1>";
-        // var root = document.getElementById("root");
-        // root.innerHTML = template;
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-        var template = React.createElement('h1', null, 'My first react app');
+    <script type="text/babel">       
+
+        var template = <h1>My first react app</h1>;  // JSX -> Javascript XML
         var root = ReactDOM.createRoot(document.getElementById("root"));
         root.render(template);
+        
     </script>
 </body>
 
