--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,8 @@
 <body>
     <div id="root"></div>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
-    <script type="text/babel">       
-
-        var template = <h1>My first react app</h1>;  // JSX -> Javascript XML
-        var root = ReactDOM.createRoot(document.getElementById("root"));
-        root.render(template);
-        
-    </script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>  
+    <script src="js/app.js"></script>
 </body>
 
 </html>
